--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -373,9 +373,9 @@
     @include transition (0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
      .main-content{
-        margin-top: 70px;
-        padding: 30px 15px;
-        min-height: calc(100vh - 123px);
+        margin-top: 0px;
+        padding: 0px;
+        min-height: calc(100vh - 0px);
     }
 
      .footer{
